crates/uv/tests/pip_compile/snapshots/pip_compile__pip_compile__pep_751_compile_g_e_specific_included_dep_vers@wsl1.snap
---
source: crates/uv/tests/pip_compile/pip_compile.rs
expression: snapshot
---
exit_code: 0 (success)
----- stdout -----
# This file was autogenerated by uv via the following command:
#    uv pip compile --cache-dir [CACHE_DIR] pyproject.toml --universal --group wls1 -o pylock.toml
lock-version = "1.0"
created-by = "uv"
requires-python = ">=3.12"
extras = [
    "new",
]
dependency-groups = [
    "wls1",
]

[[packages]]
name = "anyio"
version = "4.3.0"
marker = "'wls1' in dependency_groups"
sdist = { url = "https://files.pythonhosted.org/packages/db/4d/3970183622f0330d3c23d9b8a5f52e365e50381fd484d08e3285104333d3/anyio-4.3.0.tar.gz", upload-time = 2024-02-19T08:36:28Z, size = 159642, hashes = { sha256 = "f75253795a87df48568485fd18cdd2a3fa5c4f7c5be8e5e36637733fce06fed6" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/14/fd/2f20c40b45e4fb4324834aea24bd4afdf1143390242c0b33774da0e2e34f/anyio-4.3.0-py3-none-any.whl", upload-time = 2024-02-19T08:36:26Z, size = 85584, hashes = { sha256 = "048e05d0f6caeed70d731f3db756d35dcc1f35747c8c403364a8332c630441b8" } }]

[[packages]]
name = "certifi"
version = "2024.2.2"
sdist = { url = "https://files.pythonhosted.org/packages/71/da/e94e26401b62acd6d91df2b52954aceb7f561743aa5ccc32152886c76c96/certifi-2024.2.2.tar.gz", upload-time = 2024-02-02T01:22:17Z, size = 164886, hashes = { sha256 = "0569859f95fc761b18b45ef421b1290a0f65f147e92a1e5eb3e635f9a5e4e66f" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/ba/06/a07f096c664aeb9f01624f858c3add0a4e913d6c96257acb4fce61e7de14/certifi-2024.2.2-py3-none-any.whl", upload-time = 2024-02-02T01:22:14Z, size = 163774, hashes = { sha256 = "dc383c07b76109f368f6106eee2b593b04a011ea4d55f652c6ca24a754d1cdd1" } }]

[[packages]]
name = "charset-normalizer"
version = "3.3.2"
sdist = { url = "https://files.pythonhosted.org/packages/63/09/c1bc53dab74b1816a00d8d030de5bf98f724c52c1635e07681d312f20be8/charset-normalizer-3.3.2.tar.gz", upload-time = 2023-11-01T04:04:59Z, size = 104809, hashes = { sha256 = "f30c3cb33b24454a82faecaf01b19c18562b1e89558fb6c56de4d9118a032fd5" } }
wheels = [
    { url = "https://files.pythonhosted.org/packages/d1/b2/fcedc8255ec42afee97f9e6f0145c734bbe104aac28300214593eb326f1d/charset_normalizer-3.3.2-cp312-cp312-macosx_10_9_universal2.whl", upload-time = 2023-11-01T04:03:24Z, size = 192892, hashes = { sha256 = "0b2b64d2bb6d3fb9112bafa732def486049e63de9618b5843bcdd081d8144cd8" } },
    { url = "https://files.pythonhosted.org/packages/2e/7d/2259318c202f3d17f3fe6438149b3b9e706d1070fe3fcbb28049730bb25c/charset_normalizer-3.3.2-cp312-cp312-macosx_10_9_x86_64.whl", upload-time = 2023-11-01T04:03:25Z, size = 122213, hashes = { sha256 = "ddbb2551d7e0102e7252db79ba445cdab71b26640817ab1e3e3648dad515003b" } },
    { url = "https://files.pythonhosted.org/packages/3a/52/9f9d17c3b54dc238de384c4cb5a2ef0e27985b42a0e5cc8e8a31d918d48d/charset_normalizer-3.3.2-cp312-cp312-macosx_11_0_arm64.whl", upload-time = 2023-11-01T04:03:27Z, size = 119404, hashes = { sha256 = "55086ee1064215781fff39a1af09518bc9255b50d6333f2e4c74ca09fac6a8f6" } },
    { url = "https://files.pythonhosted.org/packages/99/b0/9c365f6d79a9f0f3c379ddb40a256a67aa69c59609608fe7feb6235896e1/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl", upload-time = 2023-11-01T04:03:28Z, size = 137275, hashes = { sha256 = "8f4a014bc36d3c57402e2977dada34f9c12300af536839dc38c0beab8878f38a" } },
    { url = "https://files.pythonhosted.org/packages/91/33/749df346e93d7a30cdcb90cbfdd41a06026317bfbfb62cd68307c1a3c543/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_ppc64le.manylinux2014_ppc64le.whl", upload-time = 2023-11-01T04:03:29Z, size = 147518, hashes = { sha256 = "a10af20b82360ab00827f916a6058451b723b4e65030c5a18577c8b2de5b3389" } },
    { url = "https://files.pythonhosted.org/packages/72/1a/641d5c9f59e6af4c7b53da463d07600a695b9824e20849cb6eea8a627761/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_s390x.manylinux2014_s390x.whl", upload-time = 2023-11-01T04:03:31Z, size = 140182, hashes = { sha256 = "8d756e44e94489e49571086ef83b2bb8ce311e730092d2c34ca8f7d925cb20aa" } },
    { url = "https://files.pythonhosted.org/packages/ee/fb/14d30eb4956408ee3ae09ad34299131fb383c47df355ddb428a7331cfa1e/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", upload-time = 2023-11-01T04:03:32Z, size = 141869, hashes = { sha256 = "90d558489962fd4918143277a773316e56c72da56ec7aa3dc3dbbe20fdfed15b" } },
    { url = "https://files.pythonhosted.org/packages/df/3e/a06b18788ca2eb6695c9b22325b6fde7dde0f1d1838b1792a0076f58fe9d/charset_normalizer-3.3.2-cp312-cp312-manylinux_2_5_i686.manylinux1_i686.manylinux_2_17_i686.manylinux2014_i686.whl", upload-time = 2023-11-01T04:03:34Z, size = 144042, hashes = { sha256 = "6ac7ffc7ad6d040517be39eb591cac5ff87416c2537df6ba3cba3bae290c0fed" } },
    { url = "https://files.pythonhosted.org/packages/45/59/3d27019d3b447a88fe7e7d004a1e04be220227760264cc41b405e863891b/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_aarch64.whl", upload-time = 2023-11-01T04:03:35Z, size = 138275, hashes = { sha256 = "7ed9e526742851e8d5cc9e6cf41427dfc6068d4f5a3bb03659444b4cabf6bc26" } },
    { url = "https://files.pythonhosted.org/packages/7b/ef/5eb105530b4da8ae37d506ccfa25057961b7b63d581def6f99165ea89c7e/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_i686.whl", upload-time = 2023-11-01T04:03:37Z, size = 144819, hashes = { sha256 = "8bdb58ff7ba23002a4c5808d608e4e6c687175724f54a5dade5fa8c67b604e4d" } },
    { url = "https://files.pythonhosted.org/packages/a2/51/e5023f937d7f307c948ed3e5c29c4b7a3e42ed2ee0b8cdf8f3a706089bf0/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_ppc64le.whl", upload-time = 2023-11-01T04:03:38Z, size = 149415, hashes = { sha256 = "6b3251890fff30ee142c44144871185dbe13b11bab478a88887a639655be1068" } },
    { url = "https://files.pythonhosted.org/packages/24/9d/2e3ef673dfd5be0154b20363c5cdcc5606f35666544381bee15af3778239/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_s390x.whl", upload-time = 2023-11-01T04:03:40Z, size = 141212, hashes = { sha256 = "b4a23f61ce87adf89be746c8a8974fe1c823c891d8f86eb218bb957c924bb143" } },
    { url = "https://files.pythonhosted.org/packages/5b/ae/ce2c12fcac59cb3860b2e2d76dc405253a4475436b1861d95fe75bdea520/charset_normalizer-3.3.2-cp312-cp312-musllinux_1_1_x86_64.whl", upload-time = 2023-11-01T04:03:41Z, size = 142167, hashes = { sha256 = "efcb3f6676480691518c177e3b465bcddf57cea040302f9f4e6e191af91174d4" } },
    { url = "https://files.pythonhosted.org/packages/ed/3a/a448bf035dce5da359daf9ae8a16b8a39623cc395a2ffb1620aa1bce62b0/charset_normalizer-3.3.2-cp312-cp312-win32.whl", upload-time = 2023-11-01T04:03:42Z, size = 93041, hashes = { sha256 = "d965bba47ddeec8cd560687584e88cf699fd28f192ceb452d1d7ee807c5597b7" } },
    { url = "https://files.pythonhosted.org/packages/b6/7c/8debebb4f90174074b827c63242c23851bdf00a532489fba57fef3416e40/charset_normalizer-3.3.2-cp312-cp312-win_amd64.whl", upload-time = 2023-11-01T04:03:44Z, size = 100397, hashes = { sha256 = "96b02a3dc4381e5494fad39be677abcb5e6634bf7b4fa83a6dd3112607547001" } },
    { url = "https://files.pythonhosted.org/packages/28/76/e6222113b83e3622caa4bb41032d0b1bf785250607392e1b778aca0b8a7d/charset_normalizer-3.3.2-py3-none-any.whl", upload-time = 2023-11-01T04:04:58Z, size = 48543, hashes = { sha256 = "3e4d1f6587322d2788836a99c69062fbb091331ec940e02d12d179c1d53e25fc" } },
]

[[packages]]
name = "colorama"
version = "0.4.6"
marker = "'new' not in extras"
sdist = { url = "https://files.pythonhosted.org/packages/d8/53/6f443c9a4a8358a93a6792e2acffb9d9d5cb0a5cfd8802644b7b1c9a02e4/colorama-0.4.6.tar.gz", upload-time = 2022-10-25T02:36:22Z, size = 27697, hashes = { sha256 = "08695f5cb7ed6e0531a20572697297273c47b8cae5a63ffc6d6ed5c201be6e44" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/d1/d6/3965ed04c63042e047cb6a3e6ed1a63a35087b6a609aa3a15ed8ac56c221/colorama-0.4.6-py2.py3-none-any.whl", upload-time = 2022-10-25T02:36:20Z, size = 25335, hashes = { sha256 = "4f1d9991f5acc0ca119f9d443620b77f9d6b33703e51011c16baf57afb285fc6" } }]

[[packages]]
name = "commonmark"
version = "0.9.1"
marker = "'new' not in extras"
sdist = { url = "https://files.pythonhosted.org/packages/60/48/a60f593447e8f0894ebb7f6e6c1f25dafc5e89c5879fdc9360ae93ff83f0/commonmark-0.9.1.tar.gz", upload-time = 2019-10-04T15:37:39Z, size = 95764, hashes = { sha256 = "452f9dc859be7f06631ddcb328b6919c67984aca654e5fefb3914d54691aed60" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/b1/92/dfd892312d822f36c55366118b95d914e5f16de11044a27cf10a7d71bbbf/commonmark-0.9.1-py2.py3-none-any.whl", upload-time = 2019-10-04T15:37:37Z, size = 51068, hashes = { sha256 = "da2f38c92590f83de410ba1a3cbceafbc74fee9def35f9251ba9a971d6d66fd9" } }]

[[packages]]
name = "h11"
version = "0.14.0"
marker = "'wls1' in dependency_groups"
sdist = { url = "https://files.pythonhosted.org/packages/f5/38/3af3d3633a34a3316095b39c8e8fb4853a28a536e55d347bd8d8e9a14b03/h11-0.14.0.tar.gz", upload-time = 2022-09-25T15:40:01Z, size = 100418, hashes = { sha256 = "8f19fbbe99e72420ff35c00b27a34cb9937e902a8b810e2c88300c6f0a3b699d" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/95/04/ff642e65ad6b90db43e668d70ffb6736436c7ce41fcc549f4e9472234127/h11-0.14.0-py3-none-any.whl", upload-time = 2022-09-25T15:39:59Z, size = 58259, hashes = { sha256 = "e3fe4ac4b851c468cc8363d500db52c2ead036020723024a109d37346efaa761" } }]

[[packages]]
name = "httpcore"
version = "1.0.4"
marker = "'wls1' in dependency_groups"
sdist = { url = "https://files.pythonhosted.org/packages/03/9d/2055e6b65592d3a485a1141761ba7047674bbe085cebac0988b30e93c9e6/httpcore-1.0.4.tar.gz", upload-time = 2024-02-21T13:02:30Z, size = 83096, hashes = { sha256 = "cb2839ccfcba0d2d3c1131d3c3e26dfc327326fbe7a5dc0dbfe9f6c9151bb022" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/2c/93/13f25f2f78646bab97aee7680821e30bd85b2ff0fc45d5fdf5393b79716d/httpcore-1.0.4-py3-none-any.whl", upload-time = 2024-02-21T13:02:28Z, size = 77850, hashes = { sha256 = "ac418c1db41bade2ad53ae2f3834a3a0f5ae76b56cf5aa497d2d033384fc7d73" } }]

[[packages]]
name = "httpx"
version = "0.27.0"
marker = "'wls1' in dependency_groups"
sdist = { url = "https://files.pythonhosted.org/packages/5c/2d/3da5bdf4408b8b2800061c339f240c1802f2e82d55e50bd39c5a881f47f0/httpx-0.27.0.tar.gz", upload-time = 2024-02-21T13:07:52Z, size = 126413, hashes = { sha256 = "a0cb88a46f32dc874e04ee956e4c2764aba2aa228f650b06788ba6bda2962ab5" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/41/7b/ddacf6dcebb42466abd03f368782142baa82e08fc0c1f8eaa05b4bae87d5/httpx-0.27.0-py3-none-any.whl", upload-time = 2024-02-21T13:07:50Z, size = 75590, hashes = { sha256 = "71d5465162c13681bff01ad59b2cc68dd838ea1f10e51574bac27103f00c91a5" } }]

[[packages]]
name = "idna"
version = "3.6"
sdist = { url = "https://files.pythonhosted.org/packages/bf/3f/ea4b9117521a1e9c50344b909be7886dd00a519552724809bb1f486986c2/idna-3.6.tar.gz", upload-time = 2023-11-25T15:40:54Z, size = 175426, hashes = { sha256 = "9ecdbbd083b06798ae1e86adcbfe8ab1479cf864e4ee30fe4e46a003d12491ca" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/c2/e7/a82b05cf63a603df6e68d59ae6a68bf5064484a0718ea5033660af4b54a9/idna-3.6-py3-none-any.whl", upload-time = 2023-11-25T15:40:52Z, size = 61567, hashes = { sha256 = "c05567e9c24a6b9faaa835c4821bad0590fbb9d5779e7caa6e1cc4978e7eb24f" } }]

[[packages]]
name = "markdown-it-py"
version = "3.0.0"
marker = "'new' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/38/71/3b932df36c1a044d397a1f92d1cf91ee0a503d91e470cbd670aa66b07ed0/markdown-it-py-3.0.0.tar.gz", upload-time = 2023-06-03T06:41:14Z, size = 74596, hashes = { sha256 = "e3f60a94fa066dc52ec76661e37c851cb232d92f9886b15cb560aaada2df8feb" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/42/d7/1ec15b46af6af88f19b8e5ffea08fa375d433c998b8a7639e76935c14f1f/markdown_it_py-3.0.0-py3-none-any.whl", upload-time = 2023-06-03T06:41:11Z, size = 87528, hashes = { sha256 = "355216845c60bd96232cd8d8c40e8f9765cc86f46880e43a8fd22dc1a1a8cab1" } }]

[[packages]]
name = "mdurl"
version = "0.1.2"
marker = "'new' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/d6/54/cfe61301667036ec958cb99bd3efefba235e65cdeb9c84d24a8293ba1d90/mdurl-0.1.2.tar.gz", upload-time = 2022-08-14T12:40:10Z, size = 8729, hashes = { sha256 = "bb413d29f5eea38f31dd4754dd7377d4465116fb207585f97bf925588687c1ba" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/b3/38/89ba8ad64ae25be8de66a6d463314cf1eb366222074cfda9ee839c56a4b4/mdurl-0.1.2-py3-none-any.whl", upload-time = 2022-08-14T12:40:09Z, size = 9979, hashes = { sha256 = "84008a41e51615a49fc9966191ff91509e3c40b939176e643fd50a5c2196b8f8" } }]

[[packages]]
name = "pprintpp"
version = "0.4.0"
marker = "'new' not in extras"
sdist = { url = "https://files.pythonhosted.org/packages/06/1a/7737e7a0774da3c3824d654993cf57adc915cb04660212f03406334d8c0b/pprintpp-0.4.0.tar.gz", upload-time = 2018-07-01T01:42:34Z, size = 17995, hashes = { sha256 = "ea826108e2c7f49dc6d66c752973c3fc9749142a798d6b254e1e301cfdbc6403" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/4e/d1/e4ed95fdd3ef13b78630280d9e9e240aeb65cc7c544ec57106149c3942fb/pprintpp-0.4.0-py2.py3-none-any.whl", upload-time = 2018-07-01T01:42:36Z, size = 16952, hashes = { sha256 = "b6b4dcdd0c0c0d75e4d7b2f21a9e933e5b2ce62b26e1a54537f9651ae5a5c01d" } }]

[[packages]]
name = "pygments"
version = "2.17.2"
sdist = { url = "https://files.pythonhosted.org/packages/55/59/8bccf4157baf25e4aa5a0bb7fa3ba8600907de105ebc22b0c78cfbf6f565/pygments-2.17.2.tar.gz", upload-time = 2023-11-21T20:43:53Z, size = 4827772, hashes = { sha256 = "da46cec9fd2de5be3a8a784f434e4c4ab670b4ff54d605c4c2717e9d49c4c367" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/97/9c/372fef8377a6e340b1704768d20daaded98bf13282b5327beb2e2fe2c7ef/pygments-2.17.2-py3-none-any.whl", upload-time = 2023-11-21T20:43:49Z, size = 1179756, hashes = { sha256 = "b27c2826c47d0f3219f29554824c30c5e8945175d888647acd804ddd04af846c" } }]

[[packages]]
name = "requests"
version = "2.31.0"
sdist = { url = "https://files.pythonhosted.org/packages/9d/be/10918a2eac4ae9f02f6cfe6414b7a155ccd8f7f9d4380d62fd5b955065c3/requests-2.31.0.tar.gz", upload-time = 2023-05-22T15:12:44Z, size = 110794, hashes = { sha256 = "942c5a758f98d790eaed1a29cb6eefc7ffb0d1cf7af05c3d2791656dbd6ad1e1" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/70/8e/0e2d847013cb52cd35b38c009bb167a1a26b2ce6cd6965bf26b47bc0bf44/requests-2.31.0-py3-none-any.whl", upload-time = 2023-05-22T15:12:42Z, size = 62574, hashes = { sha256 = "58cd2187c01e70e6e26505bca751777aa9f2ee0b7f4300988b709f44e013003f" } }]

[[packages]]
name = "rich"
version = "0.8.13"
marker = "'new' not in extras"
sdist = { url = "https://files.pythonhosted.org/packages/c5/e7/961eacca03043055fe3f83fb426022a085a32bf487a5b02e65ba852db7aa/rich-0.8.13.tar.gz", upload-time = 2020-04-28T15:10:58Z, size = 107484, hashes = { sha256 = "fc8d6ec66bc9d12cf4f4291ff4d149f784bd6de33ec547950e9456899773f9b2" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/76/f7/4c7304b3642956088189ce296fc81325ffc19fd68d776ba3c7cde8ab208c/rich-0.8.13-py3-none-any.whl", upload-time = 2020-04-28T15:10:56Z, size = 116128, hashes = { sha256 = "0611363007766954e606714982dfd5bba165e3cb4fb814f9196c84488d77071a" } }]

[[packages]]
name = "rich"
version = "13.7.1"
marker = "'new' in extras"
sdist = { url = "https://files.pythonhosted.org/packages/b3/01/c954e134dc440ab5f96952fe52b4fdc64225530320a910473c1fe270d9aa/rich-13.7.1.tar.gz", upload-time = 2024-02-28T14:51:19Z, size = 221248, hashes = { sha256 = "9be308cb1fe2f1f57d67ce99e95af38a1e2bc71ad9813b0e247cf7ffbcc3a432" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/87/67/a37f6214d0e9fe57f6ae54b2956d550ca8365857f42a1ce0392bb21d9410/rich-13.7.1-py3-none-any.whl", upload-time = 2024-02-28T14:51:14Z, size = 240681, hashes = { sha256 = "4edbae314f59eb482f54e9e30bf00d33350aaa94f4bfcd4e9e3110e64d0d7222" } }]

[[packages]]
name = "sniffio"
version = "1.3.1"
marker = "'wls1' in dependency_groups"
sdist = { url = "https://files.pythonhosted.org/packages/a2/87/a6771e1546d97e7e041b6ae58d80074f81b7d5121207425c964ddf5cfdbd/sniffio-1.3.1.tar.gz", upload-time = 2024-02-25T23:20:04Z, size = 20372, hashes = { sha256 = "f4324edc670a0f49750a81b895f35c3adb843cca46f0530f79fc1babb23789dc" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/e9/44/75a9c9421471a6c4805dbf2356f7c181a29c1879239abab1ea2cc8f38b40/sniffio-1.3.1-py3-none-any.whl", upload-time = 2024-02-25T23:20:01Z, size = 10235, hashes = { sha256 = "2f6da418d1f1e0fddd844478f41680e794e6051915791a034ff65e5f100525a2" } }]

[[packages]]
name = "typing-extensions"
version = "3.10.0.2"
marker = "'new' not in extras"
sdist = { url = "https://files.pythonhosted.org/packages/ed/12/c5079a15cf5c01d7f4252b473b00f7e68ee711be605b9f001528f0298b98/typing_extensions-3.10.0.2.tar.gz", upload-time = 2021-08-30T18:46:27Z, size = 46048, hashes = { sha256 = "49f75d16ff11f1cd258e1b988ccff82a3ca5570217d7ad8c5f48205dd99a677e" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/74/60/18783336cc7fcdd95dae91d73477830aa53f5d3181ae4fe20491d7fc3199/typing_extensions-3.10.0.2-py3-none-any.whl", upload-time = 2021-08-30T18:46:26Z, size = 26288, hashes = { sha256 = "f1d25edafde516b146ecd0613dabcc61409817af4766fbbcfb8d1ad4ec441a34" } }]

[[packages]]
name = "urllib3"
version = "2.2.1"
sdist = { url = "https://files.pythonhosted.org/packages/7a/50/7fd50a27caa0652cd4caf224aa87741ea41d3265ad13f010886167cfcc79/urllib3-2.2.1.tar.gz", upload-time = 2024-02-18T03:55:57Z, size = 291020, hashes = { sha256 = "d0570876c61ab9e520d776c38acbbb5b05a776d3f9ff98a5c8fd5162a444cf19" } }
wheels = [{ url = "https://files.pythonhosted.org/packages/a2/73/a68704750a7679d0b6d3ad7aa8d4da8e14e151ae82e6fee774e6e0d05ec8/urllib3-2.2.1-py3-none-any.whl", upload-time = 2024-02-18T03:55:54Z, size = 121067, hashes = { sha256 = "450b20ec296a467077128bff42b73080516e71b56ff59a60a02bef2232c4fa9d" } }]

----- stderr -----
Resolved 19 packages in [TIME]
